navigation: fix structure leak if subclass doesn't implement send_event()

The send_event() implementation is supposed to consume @structure.

https://bugzilla.gnome.org/show_bug.cgi?id=748903